ensure quantity in item list will not overflow the width

--- a/style.css
+++ b/style.css
@@ -194,6 +194,7 @@ main {
 
 .input-item-quantity {
     background-color: var(--background-color-cart);
+    width: 100%;
 }
 
 .btn-remove {
